--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/zocom-david-lundholm/slutprojekt-websecurity#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "nedb-promise": "^2.0.1"
   }
 }
